# esp-hitachi-2

./: .gitignore  CMakeLists.txt  README.md  config.py  hitachi-config.json  partitions.csv  sdkconfig  sdkconfig.old
bootloader_components/main/: idf_component.yml
components/rust-esp-cmake/: CMakeLists.txt  Cargo.toml  build.rs  sdkconfig
components/rust-esp-cmake/.cargo/: config.toml
components/rust-esp-cmake/include/: extra_bindings.h
components/rust-esp-cmake/src/: conf.rs  event_queue.rs  lib.rs  lights.rs  motor.rs  wifi.rs
components/rust-esp-cmake/src/conn/: ble.rs  http.rs  mod.rs  remote_log.rs  serial.rs
components/rust-esp-cmake/src/idf_libs/: button.rs  led_strip.rs  log_redirection.rs  mod.rs  ntc.rs
main/: idf_component.yml  main.c
